--- a/src/Client/package.json
+++ b/src/Client/package.json
@@ -12,40 +12,40 @@
     "update-yarn": "yarn set version stable",
     "ncu": "yarn dlx npm-check-updates"
   },
-  "packageManager": "yarn@4.0.1",
+  "packageManager": "yarn@4.0.2",
   "devDependencies": {
-    "@babel/core": "7.23.3",
+    "@babel/core": "7.23.7",
     "@babel/eslint-parser": "7.23.3",
     "@babel/plugin-syntax-import-assertions": "7.23.3",
-    "@babel/preset-env": "7.23.3",
+    "@babel/preset-env": "7.23.8",
     "babel-loader": "9.1.3",
     "bytes": "3.1.2",
-    "copy-webpack-plugin": "11.0.0",
+    "copy-webpack-plugin": "12.0.1",
     "csp-html-webpack-plugin": "5.1.0",
-    "css-loader": "6.8.1",
+    "css-loader": "6.9.0",
     "css-minimizer-webpack-plugin": "5.0.1",
     "enhanced-resolve": "5.15.0",
-    "eslint": "8.53.0",
-    "eslint-config-prettier": "9.0.0",
+    "eslint": "8.56.0",
+    "eslint-config-prettier": "9.1.0",
     "eslint-plugin-compat": "4.2.0",
-    "eslint-plugin-import": "2.29.0",
-    "eslint-plugin-jsdoc": "46.9.0",
+    "eslint-plugin-import": "2.29.1",
+    "eslint-plugin-jsdoc": "48.0.2",
     "eslint-plugin-no-unsanitized": "4.0.2",
-    "eslint-plugin-prettier": "5.0.1",
+    "eslint-plugin-prettier": "5.1.3",
     "eslint-webpack-plugin": "4.0.1",
     "glob": "10.3.10",
     "html-inline-css-webpack-plugin": "1.11.2",
-    "html-webpack-plugin": "5.5.3",
+    "html-webpack-plugin": "5.6.0",
     "ignore-loader": "0.1.2",
     "immutability-helper": "3.1.1",
-    "mini-css-extract-plugin": "2.7.6",
+    "mini-css-extract-plugin": "2.7.7",
     "minimatch": "9.0.3",
-    "postcss": "8.4.31",
-    "postcss-load-config": "4.0.1",
-    "postcss-loader": "7.3.3",
-    "postcss-merge-rules": "6.0.1",
+    "postcss": "8.4.33",
+    "postcss-load-config": "5.0.2",
+    "postcss-loader": "7.3.4",
+    "postcss-merge-rules": "6.0.3",
     "postcss-preset-env": "9.3.0",
-    "prettier": "3.1.0",
+    "prettier": "3.2.1",
     "stylelint": "15.11.0",
     "stylelint-config-standard": "34.0.0",
     "stylelint-webpack-plugin": "4.1.1",
@@ -58,18 +58,18 @@
     "tslib": "*"
   },
   "dependencies": {
-    "@microsoft/applicationinsights-web": "3.0.5",
-    "@pixi/app": "7.3.2",
-    "@pixi/core": "7.3.2",
-    "@pixi/display": "7.3.2",
-    "@pixi/graphics": "7.3.2",
-    "@pixi/sprite": "7.3.2",
-    "@pixi/unsafe-eval": "7.3.2",
-    "core-js": "3.33.3",
+    "@microsoft/applicationinsights-web": "3.0.7",
+    "@pixi/app": "7.3.3",
+    "@pixi/core": "7.3.3",
+    "@pixi/display": "7.3.3",
+    "@pixi/graphics": "7.3.3",
+    "@pixi/sprite": "7.3.3",
+    "@pixi/unsafe-eval": "7.3.3",
+    "core-js": "3.35.0",
     "navigator.sendbeacon": "0.0.20",
     "unfetch": "5.0.0"
   },
   "resolutions": {
-    "@pixi/utils@7.3.2": "patch:@pixi/utils@npm%3A7.3.2#./.yarn/patches/@pixi-utils-npm-7.3.2-2d7bf49cac.patch"
+    "@pixi/utils@npm:7.3.3": "patch:@pixi/utils@npm%3A7.3.3#~/.yarn/patches/@pixi-utils-npm-7.3.3-3247f0a86a.patch"
   }
 }
