--- a/src/Client/package.json
+++ b/src/Client/package.json
@@ -10,7 +10,8 @@
     "production": "webpack --config webpack.production.mjs",
     "start": "webpack serve --config webpack.development.mjs --open",
     "update-yarn": "yarn set version stable",
-    "ncu": "yarn dlx npm-check-updates"
+    "ncu": "yarn dlx npm-check-updates",
+    "update-browserslist-db": "yarn dlx update-browserslist-db@latest"
   },
   "packageManager": "yarn@4.0.2",
   "devDependencies": {
