--- a/src/Client/package.json
+++ b/src/Client/package.json
@@ -13,6 +13,10 @@
     "ncu": "yarn dlx npm-check-updates",
     "update-browserslist-db": "yarn dlx update-browserslist-db@latest"
   },
+  "engines": {
+    "yarn": "4.x",
+    "node": "20.x | 21.x"
+  },
   "packageManager": "yarn@4.0.2",
   "devDependencies": {
     "@babel/core": "7.23.7",
@@ -21,10 +25,10 @@
     "@babel/preset-env": "7.23.8",
     "babel-loader": "9.1.3",
     "bytes": "3.1.2",
-    "copy-webpack-plugin": "12.0.1",
+    "copy-webpack-plugin": "12.0.2",
     "csp-html-webpack-plugin": "5.1.0",
-    "css-loader": "6.9.0",
-    "css-minimizer-webpack-plugin": "5.0.1",
+    "css-loader": "6.9.1",
+    "css-minimizer-webpack-plugin": "6.0.0",
     "enhanced-resolve": "5.15.0",
     "eslint": "8.56.0",
     "eslint-config-prettier": "9.1.0",
@@ -43,10 +47,10 @@
     "minimatch": "9.0.3",
     "postcss": "8.4.33",
     "postcss-load-config": "5.0.2",
-    "postcss-loader": "7.3.4",
+    "postcss-loader": "8.0.0",
     "postcss-merge-rules": "6.0.3",
     "postcss-preset-env": "9.3.0",
-    "prettier": "3.2.1",
+    "prettier": "3.2.4",
     "stylelint": "15.11.0",
     "stylelint-config-standard": "34.0.0",
     "stylelint-webpack-plugin": "4.1.1",
