--- a/src/Client/package.json
+++ b/src/Client/package.json
@@ -10,8 +10,7 @@
     "production": "webpack --config webpack.production.mjs",
     "start": "webpack serve --config webpack.development.mjs --open",
     "update-yarn": "yarn set version stable",
-    "ncu": "yarn dlx npm-check-updates",
-    "update-browserslist-db": "yarn dlx update-browserslist-db@latest"
+    "ncu": "yarn dlx npm-check-updates"
   },
   "engines": {
     "yarn": "4.x",
@@ -24,6 +23,7 @@
     "@babel/plugin-syntax-import-assertions": "7.23.3",
     "@babel/preset-env": "7.23.9",
     "babel-loader": "9.1.3",
+    "browserslist": "4.22.3",
     "bytes": "3.1.2",
     "copy-webpack-plugin": "12.0.2",
     "csp-html-webpack-plugin": "5.1.0",
@@ -54,6 +54,7 @@
     "stylelint": "16.2.1",
     "stylelint-config-standard": "36.0.0",
     "stylelint-webpack-plugin": "5.0.0",
+    "update-browserslist-db": "1.0.13",
     "webpack": "5.90.1",
     "webpack-cli": "5.1.4",
     "webpack-dev-server": "4.15.1",
