--- a/src/Client/package.json
+++ b/src/Client/package.json
@@ -45,6 +45,7 @@
     "immutability-helper": "3.1.1",
     "mini-css-extract-plugin": "2.8.0",
     "minimatch": "9.0.3",
+    "picocolors": "^1.0.0",
     "postcss": "8.4.33",
     "postcss-load-config": "5.0.2",
     "postcss-loader": "8.1.0",
