--- a/src/Client/.vscode/settings.json
+++ b/src/Client/.vscode/settings.json
@@ -3,8 +3,8 @@
   "editor.formatOnSave": true,
   "editor.formatOnPaste": true,
   "editor.codeActionsOnSave": {
-    "source.fixAll.eslint": true,
-    "source.organizeImports": true
+    "source.fixAll.eslint": "explicit",
+    "source.organizeImports": "explicit"
   },
   "eslint.enable": true,
   "eslint.useESLintClass": true,
