--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -4,8 +4,9 @@ updates:
   - package-ecosystem: "github-actions"
     directory: "/"
     schedule:
-      interval: "daily"
-      time: "17:00"
+      interval: "weekly"
+      day: saturday
+      time: "10:00"
       timezone: "Europe/Stockholm"
     groups:
       github-actions:
@@ -15,8 +16,9 @@ updates:
   - package-ecosystem: "nuget"
     directory: "/src"
     schedule:
-      interval: "daily"
-      time: "17:00"
+      interval: "weekly"
+      day: saturday
+      time: "10:00"
       timezone: "Europe/Stockholm"
     groups:
       api:
@@ -26,8 +28,9 @@ updates:
   - package-ecosystem: "nuget"
     directory: "/src/Api.Tests"
     schedule:
-      interval: "daily"
-      time: "17:00"
+      interval: "weekly"
+      day: saturday
+      time: "10:00"
       timezone: "Europe/Stockholm"
     groups:
       api-tests:
@@ -37,8 +40,9 @@ updates:
   - package-ecosystem: "npm"
     directory: "/src/Client"
     schedule:
-      interval: "daily"
-      time: "17:00"
+      interval: "weekly"
+      day: saturday
+      time: "10:00"
       timezone: "Europe/Stockholm"
     open-pull-requests-limit: 10
     groups:
