--- a/src/Client/package.json
+++ b/src/Client/package.json
@@ -21,6 +21,7 @@
   "devDependencies": {
     "@babel/core": "7.23.9",
     "@babel/eslint-parser": "7.23.10",
+    "@babel/helper-compilation-targets": "7.23.6",
     "@babel/plugin-syntax-import-assertions": "7.23.3",
     "@babel/preset-env": "7.23.9",
     "babel-loader": "9.1.3",
@@ -32,6 +33,7 @@
     "css-minimizer-webpack-plugin": "6.0.0",
     "enhanced-resolve": "5.15.0",
     "eslint": "8.56.0",
+    "eslint-config-airbnb-base": "15.0.0",
     "eslint-config-prettier": "9.1.0",
     "eslint-plugin-compat": "4.2.0",
     "eslint-plugin-import": "2.29.1",
@@ -46,7 +48,7 @@
     "immutability-helper": "3.1.1",
     "mini-css-extract-plugin": "2.8.0",
     "minimatch": "9.0.3",
-    "picocolors": "^1.0.0",
+    "picocolors": "1.0.0",
     "postcss": "8.4.35",
     "postcss-load-config": "5.0.3",
     "postcss-loader": "8.1.0",
@@ -56,6 +58,7 @@
     "stylelint": "16.2.1",
     "stylelint-config-standard": "36.0.0",
     "stylelint-webpack-plugin": "5.0.0",
+    "terser-webpack-plugin": "5.3.10",
     "update-browserslist-db": "1.0.13",
     "webpack": "5.90.2",
     "webpack-cli": "5.1.4",
