--- a/src/Client/package.json
+++ b/src/Client/package.json
@@ -35,6 +35,7 @@
     "eslint": "8.56.0",
     "eslint-config-airbnb-base": "15.0.0",
     "eslint-config-prettier": "9.1.0",
+    "eslint-import-resolver-exports": "1.0.0-beta.5",
     "eslint-plugin-compat": "4.2.0",
     "eslint-plugin-import": "2.29.1",
     "eslint-plugin-jsdoc": "48.1.0",
