--- a/src/Client/package.json
+++ b/src/Client/package.json
@@ -37,10 +37,11 @@
     "eslint-config-prettier": "9.1.0",
     "eslint-import-resolver-exports": "1.0.0-beta.5",
     "eslint-plugin-compat": "4.2.0",
+    "eslint-plugin-eslint-comments": "3.2.0",
     "eslint-plugin-import": "2.29.1",
     "eslint-plugin-jsdoc": "48.2.0",
-    "eslint-plugin-no-unsanitized": "4.0.2",
     "eslint-plugin-prettier": "5.1.3",
+    "eslint-plugin-promise": "6.1.1",
     "eslint-webpack-plugin": "4.0.1",
     "glob": "10.3.10",
     "html-inline-css-webpack-plugin": "1.11.2",
