--- a/src/Client/package.json
+++ b/src/Client/package.json
@@ -27,6 +27,7 @@
     "babel-loader": "9.1.3",
     "browserslist": "4.23.0",
     "bytes": "3.1.2",
+    "caniuse-lite": "1.0.30001600",
     "copy-webpack-plugin": "12.0.2",
     "csp-html-webpack-plugin": "5.1.0",
     "css-loader": "6.10.0",
