--- a/.github/workflows/build-test-deploy.yml
+++ b/.github/workflows/build-test-deploy.yml
@@ -57,7 +57,7 @@ jobs:
       - name: Node Setup
         uses: actions/setup-node@v4
         with:
-          node-version: '21.x'
+          node-version-file: ${{ env.SRC_DIR }}/${{ env.CLIENT_DIR }}/package.json
           
       - name: Corepack Enable
         run: corepack enable
