--- a/src/Client/.vscode/settings.json
+++ b/src/Client/.vscode/settings.json
@@ -7,6 +7,7 @@
     "source.organizeImports": "explicit"
   },
   "eslint.enable": true,
+  "eslint.runtime": "node", // Use system installed node instead f node shipped with vscode
   "eslint.useESLintClass": true,
   "eslint.codeActionsOnSave.rules": ["curly", "no-var", "prefer-const"],
   "css.validate": false,
