--- a/src/Client/package.json
+++ b/src/Client/package.json
@@ -22,6 +22,7 @@
     "@babel/core": "7.24.5",
     "@babel/eslint-parser": "7.24.5",
     "@babel/helper-compilation-targets": "7.23.6",
+    "@babel/plugin-syntax-import-attributes": "7.24.1",
     "@babel/preset-env": "7.24.5",
     "babel-loader": "9.1.3",
     "browserslist": "4.23.0",
