--- a/src/Client/package.json
+++ b/src/Client/package.json
@@ -24,6 +24,7 @@
     "@babel/helper-compilation-targets": "7.23.6",
     "@babel/plugin-syntax-import-attributes": "7.24.1",
     "@babel/preset-env": "7.24.5",
+    "@eslint-community/eslint-plugin-eslint-comments": "4.3.0",
     "babel-loader": "9.1.3",
     "browserslist": "4.23.0",
     "bytes": "3.1.2",
@@ -38,7 +39,6 @@
     "eslint-config-prettier": "9.1.0",
     "eslint-import-resolver-exports": "1.0.0-beta.5",
     "eslint-plugin-compat": "4.2.0",
-    "eslint-plugin-eslint-comments": "3.2.0",
     "eslint-plugin-import": "2.29.1",
     "eslint-plugin-jsdoc": "48.2.3",
     "eslint-plugin-prettier": "5.1.3",
