--- a/src/Client/package.json
+++ b/src/Client/package.json
@@ -34,7 +34,7 @@
     "css-loader": "7.1.2",
     "css-minimizer-webpack-plugin": "7.0.0",
     "enhanced-resolve": "5.17.0",
-    "eslint": "8.57.0",
+    "eslint": "9.3.0",
     "eslint-config-airbnb-base": "15.0.0",
     "eslint-config-prettier": "9.1.0",
     "eslint-import-resolver-custom-alias": "1.3.2",
@@ -46,6 +46,7 @@
     "eslint-plugin-promise": "6.5.1",
     "eslint-webpack-plugin": "4.2.0",
     "glob": "11.0.0",
+    "globals": "15.3.0",
     "html-inline-css-webpack-plugin": "1.11.2",
     "html-webpack-plugin": "5.6.0",
     "ignore-loader": "0.1.2",
