Use Yarn hardmode in github actions

--- a/.github/workflows/build-test-deploy.yml
+++ b/.github/workflows/build-test-deploy.yml
@@ -47,6 +47,8 @@ jobs:
   build_client:
     name: Build Client
     runs-on: ubuntu-latest
+    env:
+      YARN_ENABLE_HARDENED_MODE: 1
     defaults:
       run:
         working-directory: ${{ env.SRC_DIR }}
