Yarn, dedupe caniuse-lite

--- a/src/Client/.yarnrc.yml
+++ b/src/Client/.yarnrc.yml
@@ -1,3 +1,9 @@
 nodeLinker: node-modules
 
 enableGlobalCache: false
+
+logFilters:
+  [
+    { level: 'discard', text: 'skystedt.se@workspace:. must be built because it never has been before or the last one failed' },
+    { level: 'discard', text: 'skystedt.se@workspace:. must be rebuilt because its dependency tree changed' }
+  ]
