--- a/src/Client/package.json
+++ b/src/Client/package.json
@@ -37,6 +37,7 @@
     "eslint": "8.57.0",
     "eslint-config-airbnb-base": "15.0.0",
     "eslint-config-prettier": "9.1.0",
+    "eslint-import-resolver-custom-alias": "1.3.2",
     "eslint-import-resolver-exports": "1.0.0-beta.5",
     "eslint-plugin-compat": "4.2.0",
     "eslint-plugin-import": "2.29.1",
