--- a/src/Client/package.json
+++ b/src/Client/package.json
@@ -69,7 +69,7 @@
     "webpack-dev-server": "5.0.4",
     "webpack-subresource-integrity": "5.1.0"
   },
-  "peerDependencies": {
+  "optionalDependencies": {
     "tslib": "*"
   },
   "dependencies": {
