--- a/src/Client/package.json
+++ b/src/Client/package.json
@@ -20,7 +20,7 @@
   },
   "packageManager": "yarn@4.3.1",
   "devDependencies": {
-    "@babel/core": "7.24.9",
+    "@babel/core": "7.24.8",
     "@babel/eslint-parser": "7.24.8",
     "@babel/helper-compilation-targets": "7.24.8",
     "@babel/plugin-syntax-import-attributes": "7.24.7",
@@ -34,16 +34,16 @@
     "css-loader": "7.1.2",
     "css-minimizer-webpack-plugin": "7.0.0",
     "enhanced-resolve": "5.17.0",
-    "eslint": "9.3.0",
+    "eslint": "9.6.0",
     "eslint-config-airbnb-base": "15.0.0",
     "eslint-config-prettier": "9.1.0",
     "eslint-import-resolver-custom-alias": "1.3.2",
     "eslint-import-resolver-exports": "1.0.0-beta.5",
     "eslint-plugin-compat": "6.0.0",
-    "eslint-plugin-import": "2.29.1",
-    "eslint-plugin-jsdoc": "48.8.1",
-    "eslint-plugin-prettier": "5.2.1",
-    "eslint-plugin-promise": "6.5.1",
+    "eslint-plugin-import-x": "3.0.1",
+    "eslint-plugin-jsdoc": "48.7.0",
+    "eslint-plugin-prettier": "5.1.3",
+    "eslint-plugin-promise": "6.4.0",
     "eslint-webpack-plugin": "4.2.0",
     "glob": "11.0.0",
     "globals": "15.3.0",
@@ -59,7 +59,7 @@
     "postcss-loader": "8.1.1",
     "postcss-merge-rules": "7.0.2",
     "postcss-preset-env": "9.6.0",
-    "prettier": "3.3.3",
+    "prettier": "3.3.2",
     "stylelint": "16.7.0",
     "stylelint-config-standard": "36.0.1",
     "stylelint-webpack-plugin": "5.0.1",
@@ -86,6 +86,11 @@
     "unfetch": "5.0.0"
   },
   "resolutions": {
+    "eslint-config-airbnb-base": "peer:#eslint@^9;eslint-plugin-import:eslint-plugin-import-x",
+    "eslint-import-resolver-custom-alias": "peer:#eslint-plugin-import:eslint-plugin-import-x",
+    "eslint-import-resolver-exports": "peer:#eslint-plugin-import:eslint-plugin-import-x",
+    "eslint-plugin-compat": "peer:#eslint@^9",
+    "eslint-plugin-import-x/@typescript-eslint/utils": "rc-v8",
     "@pixi/utils@npm:7.4.2": "patch:@pixi/utils@npm%3A7.4.2#~/.yarn/patches/@pixi-utils-npm-7.4.2-0fd06125d9.patch"
   }
 }
