--- a/.github/workflows/build-test-deploy.yml
+++ b/.github/workflows/build-test-deploy.yml
@@ -30,7 +30,7 @@ jobs:
         run: dotnet restore
       
       - name: Dotnet Build
-        run: dotnet build --configuration ${{ env.DOTNET_CONFIGURATION }} --no-incremental --no-restore -m:1
+        run: dotnet build --configuration ${{ env.DOTNET_CONFIGURATION }} --no-incremental --no-restore
     
       - name: Dotnet Test
         run: dotnet test --configuration ${{ env.DOTNET_CONFIGURATION }} --no-build
