--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -39,3 +39,15 @@ updates:
           - "@pixi/*"
       client-development:
         dependency-type: "development"
+
+  - package-ecosystem: "npm"
+    directory: "/src/Plugins"
+    schedule:
+      interval: "weekly"
+      day: "saturday"
+      time: "10:00"
+      timezone: "Europe/Stockholm"
+    groups:
+      plugins:
+        patterns:
+          - "*"
