--- a/.github/workflows/build-test-deploy.yml
+++ b/.github/workflows/build-test-deploy.yml
@@ -42,6 +42,7 @@ jobs:
         uses: actions/upload-artifact@v4
         with:
           name: api
+          include-hidden-files: true
           path: ${{ env.SRC_DIR }}/${{ env.PUBLISH_DIR }}/${{ env.API_DIR }}
 
   build_client:
