--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -13,6 +13,14 @@ updates:
         patterns:
           - "*"
       
+  - package-ecosystem: "dotnet-sdk"
+    directory: "/src"
+    schedule:
+      interval: "weekly"
+      day: "saturday"
+      time: "10:00"
+      timezone: "Europe/Stockholm"
+          
   - package-ecosystem: "nuget"
     directory: "/src"
     schedule:
