--- a/src/Client/package.json
+++ b/src/Client/package.json
@@ -98,7 +98,6 @@
     "@microsoft/applicationinsights-core-js": "peer-patch:#tslib:-",
     "@microsoft/applicationinsights-dependencies-js": "peer-patch:#tslib:-",
     "@microsoft/applicationinsights-properties-js": "peer-patch:#tslib:-",
-    "eslint-plugin-import-x": "peer-patch:#typescript",
-    "@typescript-eslint/utils": "peer-patch:#typescript"
+    "eslint-plugin-import-x": "peer-patch:#typescript"
   }
 }
