--- a/src/Client/package.json
+++ b/src/Client/package.json
@@ -35,6 +35,7 @@
     "csp-html-webpack-plugin": "5.1.0",
     "css-loader": "7.1.2",
     "css-minimizer-webpack-plugin": "7.0.2",
+    "datauri": "4.1.0",
     "enhanced-resolve": "5.18.1",
     "eslint": "9.27.0",
     "eslint-config-airbnb-base": "15.0.0",
