--- a/src/Client/package.json
+++ b/src/Client/package.json
@@ -28,6 +28,7 @@
     "@babel/plugin-syntax-import-attributes": "7.27.1",
     "@babel/preset-env": "7.27.2",
     "@eslint-community/eslint-plugin-eslint-comments": "4.5.0",
+    "@stylistic/eslint-plugin": "^4.4.0",
     "babel-loader": "10.0.0",
     "browserslist": "4.24.5",
     "bytes": "3.1.2",
@@ -44,6 +45,7 @@
     "eslint-plugin-compat": "6.0.2",
     "eslint-plugin-import-x": "4.12.2",
     "eslint-plugin-jsdoc": "50.6.17",
+    "eslint-plugin-n": "17.18.0",
     "eslint-plugin-prettier": "5.4.0",
     "eslint-plugin-promise": "7.2.1",
     "eslint-webpack-plugin": "5.0.1",
