--- a/src/Client/package.json
+++ b/src/Client/package.json
@@ -32,7 +32,6 @@
     "babel-loader": "10.0.0",
     "browserslist": "4.25.0",
     "bytes": "3.1.2",
-    "csp-html-webpack-plugin": "5.1.0",
     "css-loader": "7.1.2",
     "css-minimizer-webpack-plugin": "7.0.2",
     "datauri": "4.1.0",
@@ -57,6 +56,7 @@
     "immutability-helper": "3.1.1",
     "mini-css-extract-plugin": "2.9.2",
     "minimatch": "10.0.1",
+    "parse5": "7.3.0",
     "picocolors": "1.1.1",
     "postcss": "8.5.4",
     "postcss-load-config": "6.0.1",
