--- a/src/Client/package.json
+++ b/src/Client/package.json
@@ -18,7 +18,7 @@
   },
   "engines": {
     "yarn": "4.x",
-    "node": "20.x || 22.x"
+    "node": "^20.19.0 || >=24"
   },
   "packageManager": "yarn@4.9.1+sha512.f95ce356460e05be48d66401c1ae64ef84d163dd689964962c6888a9810865e39097a5e9de748876c2e0bf89b232d583c33982773e9903ae7a76257270986538",
   "devDependencies": {
