--- a/src/Client/package.json
+++ b/src/Client/package.json
@@ -25,11 +25,11 @@
     "@babel/core": "7.27.4",
     "@babel/eslint-parser": "7.27.1",
     "@babel/helper-compilation-targets": "7.27.2",
-    "@babel/plugin-syntax-import-attributes": "7.27.1",
     "@babel/preset-env": "7.27.2",
     "@eslint-community/eslint-plugin-eslint-comments": "4.5.0",
     "@stylistic/eslint-plugin": "^4.4.0",
     "babel-loader": "10.0.0",
+    "babel-plugin-polyfill-corejs3": "0.12.0",
     "browserslist": "4.25.0",
     "bytes": "3.1.2",
     "css-loader": "7.1.2",
