Update peer dependencies

--- a/src/Client/.yarnrc.yml
+++ b/src/Client/.yarnrc.yml
@@ -17,8 +17,8 @@ plugins:
     spec: 'https://raw.githubusercontent.com/devoto13/yarn-plugin-engines/e6556920ba18593fb775bfcdf12fbc2af50b2642/bundles/%40yarnpkg/plugin-engines.js'
 
 packageExtensions:
-  # https://github.com/eslint-stylistic/eslint-stylistic/issues/614
-  '@stylistic/eslint-plugin@*':
+  # https://github.com/eslint-community/eslint-plugin-n/pull/451
+  'eslint-plugin-n@*':
     peerDependencies:
       typescript: '*'
 
