--- a/src/Client/package.json
+++ b/src/Client/package.json
@@ -54,6 +54,7 @@
     "html-webpack-plugin": "5.6.3",
     "ignore-loader": "0.1.2",
     "immutability-helper": "3.1.1",
+    "license-webpack-plugin": "4.0.2",
     "mini-css-extract-plugin": "2.9.2",
     "minimatch": "10.0.3",
     "parse5": "7.3.0",
@@ -64,6 +65,7 @@
     "postcss-merge-rules": "7.0.5",
     "postcss-preset-env": "10.2.4",
     "prettier": "3.6.2",
+    "spdx-satisfies": "6.0.0",
     "stylelint": "16.21.1",
     "stylelint-config-standard": "38.0.0",
     "stylelint-webpack-plugin": "5.0.1",
