--- a/src/Client/package.json
+++ b/src/Client/package.json
@@ -35,6 +35,7 @@
     "css-loader": "7.1.2",
     "css-minimizer-webpack-plugin": "7.0.2",
     "datauri": "4.1.0",
+    "diff": "8.0.2",
     "enhanced-resolve": "5.18.2",
     "eslint": "9.30.1",
     "eslint-config-airbnb-base": "15.0.0",
