--- a/src/Client/package.json
+++ b/src/Client/package.json
@@ -79,18 +79,12 @@
   },
   "dependencies": {
     "@microsoft/applicationinsights-web": "3.3.9",
-    "@pixi/app": "7.4.3",
-    "@pixi/core": "7.4.3",
-    "@pixi/display": "7.4.3",
-    "@pixi/graphics": "7.4.3",
-    "@pixi/sprite": "7.4.3",
-    "@pixi/unsafe-eval": "7.4.3",
     "core-js": "3.44.0",
     "navigator.sendbeacon": "0.0.20",
+    "pixi.js": "8.11.0",
     "unfetch": "5.0.0"
   },
   "resolutions": {
-    "@pixi/utils@npm:7.4.3": "patch:@pixi/utils@npm%3A7.4.3#~/.yarn/patches/@pixi-utils-npm-7.4.3-cb6e0da58f.patch",
     "eslint-config-airbnb-base": "peer-patch:#eslint@^9;eslint-plugin-import:eslint-plugin-import-x",
     "eslint-import-resolver-custom-alias": "peer-patch:#eslint-plugin-import:eslint-plugin-import-x",
     "eslint-import-resolver-exports": "peer-patch:#eslint-plugin-import:eslint-plugin-import-x",
