--- a/src/Client/package.json
+++ b/src/Client/package.json
@@ -27,7 +27,7 @@
     "@babel/helper-compilation-targets": "7.27.2",
     "@babel/preset-env": "7.28.0",
     "@eslint-community/eslint-plugin-eslint-comments": "4.5.0",
-    "@stylistic/eslint-plugin": "^5.2.3",
+    "@stylistic/eslint-plugin": "5.2.3",
     "babel-loader": "10.0.0",
     "babel-plugin-polyfill-corejs3": "0.13.0",
     "browserslist": "4.25.2",
@@ -48,6 +48,9 @@
     "eslint-plugin-n": "17.21.3",
     "eslint-plugin-prettier": "5.5.4",
     "eslint-plugin-promise": "7.2.1",
+    "eslint-plugin-security": "3.0.1",
+    "eslint-plugin-sonarjs": "3.0.4",
+    "eslint-plugin-unicorn": "60.0.0",
     "eslint-webpack-plugin": "5.0.2",
     "globals": "16.3.0",
     "html-inline-css-webpack-plugin": "1.11.2",
