--- a/src/Client/package.json
+++ b/src/Client/package.json
@@ -80,6 +80,7 @@
   "dependencies": {
     "@microsoft/applicationinsights-web": "3.3.9",
     "core-js": "3.45.0",
+    "element-polyfill": "1.1.0",
     "navigator.sendbeacon": "0.0.20",
     "pixi.js": "8.12.0",
     "unfetch": "5.0.0"
