--- a/src/Client/package.json
+++ b/src/Client/package.json
@@ -25,6 +25,7 @@
     "@babel/core": "7.28.3",
     "@babel/eslint-parser": "7.28.0",
     "@babel/helper-compilation-targets": "7.27.2",
+    "@babel/plugin-transform-runtime": "7.28.3",
     "@babel/preset-env": "7.28.3",
     "@eslint-community/eslint-plugin-eslint-comments": "4.5.0",
     "@stylistic/eslint-plugin": "5.2.3",
@@ -81,6 +82,7 @@
     "webpack-subresource-integrity": "5.1.0"
   },
   "dependencies": {
+    "@babel/runtime": "7.28.3",
     "@microsoft/applicationinsights-web": "3.3.9",
     "core-js": "3.45.0",
     "element-polyfill": "1.1.0",
