--- a/src/Client/package.json
+++ b/src/Client/package.json
@@ -58,6 +58,7 @@
     "html-webpack-plugin": "5.6.4",
     "ignore-loader": "0.1.2",
     "immutability-helper": "3.1.1",
+    "license-checker-rseidelsohn": "4.4.2",
     "license-webpack-plugin": "4.0.2",
     "mini-css-extract-plugin": "2.9.4",
     "minimatch": "10.0.3",
