Actions, transitive dependencies

--- a/.github/workflows/pull-request-closed.yml
+++ b/.github/workflows/pull-request-closed.yml
@@ -1,7 +1,7 @@
-name: Close Pull Request
+name: Pull Request - Closed
 
 concurrency:
-  group: close-pull-request-${{ github.ref }}
+  group: pull-request-closed-${{ github.ref }}
   cancel-in-progress: false
 
 on:
