--- a/src/Client/package.json
+++ b/src/Client/package.json
@@ -6,7 +6,7 @@
   "private": true,
   "type": "module",
   "scripts": {
-    "preinstall": "yarn dedupe caniuse-lite --strategy highest --mode=skip-build",
+    "preinstall": "yarn dedupe caniuse-lite baseline-browser-mapping --strategy highest --mode=skip-build",
     "build": "webpack --progress --config webpack.development.mjs",
     "production": "webpack --progress --config webpack.production.mjs",
     "start": "webpack serve --config webpack.development.mjs --open",
@@ -77,7 +77,7 @@
     "stylelint-webpack-plugin": "5.0.1",
     "terser-webpack-plugin": "5.3.14",
     "typescript": "5.9.2",
-    "update-browserslist-db": "1.1.3",
+    "update-browserslist-db": "1.2.3",
     "webpack": "5.101.3",
     "webpack-cli": "6.0.1",
     "webpack-dev-server": "5.2.2",
