--- a/src/.editorconfig
+++ b/src/.editorconfig
@@ -47,8 +47,11 @@ dotnet_diagnostic.CA1805.severity = none
 # CA1848: Use the LoggerMessage delegates
 dotnet_diagnostic.CA1848.severity = none
 
-# CA2201: Do not raise reserved exception types
-dotnet_diagnostic.CA2201.severity = none
-
 # CA1852: Seal internal types
 dotnet_diagnostic.CA1852.severity = none
+
+# CA1873: Avoid potentially expensive logging
+dotnet_diagnostic.CA1873.severity = none
+
+# CA2201: Do not raise reserved exception types
+dotnet_diagnostic.CA2201.severity = none
