Xunit v3 and Microsoft.Testing.Platform

--- a/src/Directory.Build.props
+++ b/src/Directory.Build.props
@@ -6,4 +6,8 @@
     <!-- https://learn.microsoft.com/en-us/dotnet/core/project-sdk/msbuild-props#analysismode -->
     <AnalysisMode>Recommended</AnalysisMode>
   </PropertyGroup>
+  <PropertyGroup Condition="$(MSBuildProjectName.EndsWith('.Tests'))">
+    <OutputType>Exe</OutputType>
+    <UseMicrosoftTestingPlatformRunner>true</UseMicrosoftTestingPlatformRunner>
+  </PropertyGroup>
 </Project>
