Treat peer dependency warnings as errors

--- a/src/Client/.yarnrc.yml
+++ b/src/Client/.yarnrc.yml
@@ -1,10 +1,16 @@
 enableGlobalCache: false
 
 logFilters:
-  - level: discard
-    text: 'skystedt.se@workspace:. must be built because it never has been before or the last one failed'
-  - level: discard
-    text: 'skystedt.se@workspace:. must be rebuilt because its dependency tree changed'
+  - code: YN0002 # MISSING_PEER_DEPENDENCY
+    level: error
+  - code: YN0059 # INVALID_RANGE_PEER_DEPENDENCY
+    level: error
+  - code: YN0060 # INCOMPATIBLE_PEER_DEPENDENCY
+    level: error
+  - text: 'skystedt.se@workspace:. must be built because it never has been before or the last one failed'
+    level: discard
+  - text: 'skystedt.se@workspace:. must be rebuilt because its dependency tree changed'
+    level: discard
 
 nodeLinker: node-modules
 
