--- a/src/Client/.yarnrc.yml
+++ b/src/Client/.yarnrc.yml
@@ -27,6 +27,11 @@ packageExtensions:
   'eslint-plugin-n@*':
     peerDependencies:
       typescript: '*'
+  # Version 3.0.6 added a dependency to ts-api-utils which is missing in the published package
+  # https://github.com/SonarSource/SonarJS/pull/6148
+  eslint-plugin-sonarjs@3.0.6:
+    dependencies:
+      ts-api-utils: '2.4.0'
 
   # remove tslib from @microsoft/applicationinsights by using resolutions peer-patch
   # https://github.com/microsoft/ApplicationInsights-JS/issues/1800
