Disable 'update client transitive dependencies' action - fix

--- a/.github/workflows/pull-request-merged-main.yml
+++ b/.github/workflows/pull-request-merged-main.yml
@@ -18,8 +18,9 @@ permissions:
 jobs:
   dependabot_metadata:
     name: Dependabot Metadata
+    # Workflow disabled
     if: |
-      false && # Workflow disabled
+      false &&
       github.event.pull_request.merged == true &&
       github.event.pull_request.user.login == 'dependabot[bot]'
     runs-on: ubuntu-latest
