Separate dependabot for eslint

--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -45,6 +45,7 @@ updates:
       client-development:
         dependency-type: "development"
         exclude-patterns:
+          - "eslint"
           - "eslint-plugin-sonarjs"
         
   - package-ecosystem: "npm"
